--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("kotlin-parcelize")
+    id("androidx.navigation.safeargs")
 }
 
 android {
@@ -50,5 +52,6 @@ dependencies {
 
     //Material
     implementation 'com.google.android.material:material:1.8.0'
+
 
 }
