--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,9 @@ dependencies {
     //Koin
     implementation "io.insert-koin:koin-android:3.2.0"
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
 
 }
